--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/behindMainArea">
 
-    <TextView
+    <ListView
+        android:id="@+id/skills_list_view"
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Stats"
-        android:textSize="40dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
-</LinearLayout>
+        android:background="@color/mainAreaColor">
+
+    </ListView>
+</ScrollView>
