--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,12 @@
     <color name="windowBackground">#FFFFFF</color>
     <color name="navigationBarColor">#000000</color>
     <color name="colorAccent">#FFBB00</color>
+
+    <color name="mainAreaColor">#FFFFFF</color>
+    <color name="behindMainArea">#DDDDDD</color>
+
+    <!-- Activities Fragment Colors -->
+    <color name="dailiesColor">#BB0000</color>
+    <color name="weekliesColor">#0099FF</color>
+    <color name="monthliesColor">#7700BB</color>
 </resources>
