--- a/app/src/main/res/layout/list_item_skill.xml
+++ b/app/src/main/res/layout/list_item_skill.xml
@@ -41,15 +41,25 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
+                android:id="@+id/current_level_progress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="10"/>
-            <ProgressBar
-                android:id="@+id/level_progress_bar"
-                android:layout_width="200dp"
-                android:layout_height="20dp"
-                style="@android:style/Widget.ProgressBar.Small"/>
+            <RelativeLayout
+                android:layout_width="@dimen/progressBarWidth"
+                android:layout_height="match_parent">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/progressBarBackgroundColor"/>
+                <View
+                    android:id="@+id/progress_bar_foreground"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/progressBarForegroundColor"/>
+            </RelativeLayout>
             <TextView
+                android:id="@+id/next_level_progress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="11"/>
