--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="dailiesColor">#BB0000</color>
     <color name="weekliesColor">#0099FF</color>
     <color name="monthliesColor">#7700BB</color>
+
+    <color name="progressBarBackgroundColor">#BBBBBB</color>
+    <color name="progressBarForegroundColor">#2277FF</color>
 </resources>
