--- a/app/src/main/res/layout/list_item_skill.xml
+++ b/app/src/main/res/layout/list_item_skill.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="10dp"
+    android:background="@color/mainAreaColor">
 
     <ImageView
         android:id="@+id/skill_icon_image"
@@ -37,10 +39,12 @@
                 android:textSize="18dp"/>
         </LinearLayout>
         <LinearLayout
+            android:paddingTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
+                android:paddingRight="10dp"
                 android:id="@+id/current_level_progress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -59,6 +63,7 @@
                     android:background="@color/progressBarForegroundColor"/>
             </RelativeLayout>
             <TextView
+                android:paddingLeft="10dp"
                 android:id="@+id/next_level_progress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
