--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ListView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/skills_list_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:divider="@android:color/transparent"
+    android:dividerHeight="8dp"
+    android:padding="20dp"
     android:background="@color/behindMainArea">
-
-    <ListView
-        android:id="@+id/skills_list_view"
-        android:layout_margin="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="8dp"
-        android:paddingBottom="40dp">
-
-    </ListView>
-
-</LinearLayout>
+</ListView>
