--- a/app/src/main/res/layout/list_item_skill.xml
+++ b/app/src/main/res/layout/list_item_skill.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/skill_icon_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_width="70dp"
+        android:layout_height="70dp" />
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -50,8 +50,9 @@
                 android:layout_height="wrap_content"
                 android:text="10"/>
             <RelativeLayout
-                android:layout_width="@dimen/progressBarWidth"
-                android:layout_height="match_parent">
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
