--- a/app/src/main/res/layout/fragment_activities.xml
+++ b/app/src/main/res/layout/fragment_activities.xml
@@ -47,12 +47,14 @@
                 android:textColor="#FFFFFF"
                 android:background="@color/weekliesColor"
                 android:gravity="center"/>
-            <ListView
-                android:id="@+id/weeklies_list_view"
+            <LinearLayout
+                android:id="@+id/weeklies_linear_layout"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#FFFFFF">
-            </ListView>
+                android:background="@color/mainAreaColor">
+
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -68,12 +70,14 @@
                 android:textColor="#FFFFFF"
                 android:background="@color/monthliesColor"
                 android:gravity="center"/>
-            <ListView
-                android:id="@+id/monthlies_list_view"
+            <LinearLayout
+                android:id="@+id/monthlies_linear_layout"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#FFFFFF">
-            </ListView>
+                android:background="@color/mainAreaColor">
+
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
