--- a/app/src/main/res/layout/fragment_activities.xml
+++ b/app/src/main/res/layout/fragment_activities.xml
@@ -19,7 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Dailies"
-                android:textSize="20dp"
+                android:textSize="@dimen/activity_type_header_size"
                 android:textColor="#FFFFFF"
                 android:background="@color/dailiesColor"
                 android:gravity="center"/>
@@ -43,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Weeklies"
-                android:textSize="20dp"
+                android:textSize="@dimen/activity_type_header_size"
                 android:textColor="#FFFFFF"
                 android:background="@color/weekliesColor"
                 android:gravity="center"/>
@@ -66,7 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Monthlies"
-                android:textSize="20dp"
+                android:textSize="@dimen/activity_type_header_size"
                 android:textColor="#FFFFFF"
                 android:background="@color/monthliesColor"
                 android:gravity="center"/>
