--- a/app/src/main/res/layout/list_item_activity.xml
+++ b/app/src/main/res/layout/list_item_activity.xml
@@ -2,23 +2,58 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
+    android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <RelativeLayout
-        android:layout_width="50dp"
-        android:layout_height="50dp">
-
-        <!-- TODO: Finish UI -->
+        android:layout_width="@dimen/activity_icon_size"
+        android:layout_height="@dimen/activity_icon_size">
+        <View
+            android:id="@+id/activity_icon_circle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/behind_icon_circle"/>
         <ImageView
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:padding="5dp"
             android:id="@+id/activity_icon_image"
-            android:src="@drawable/strength_icon"
+            android:src="@drawable/strength_icon_white"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </RelativeLayout>
-    <TextView
-        android:id="@+id/activity_category_name"
-        android:text="Running"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <!-- TODO: Finish item-->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="10dp"
+        android:paddingLeft="20dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/activity_category_name"
+                android:text="Running"
+                android:textSize="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/activity_xp_gain"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:textSize="17dp"
+                android:text="+3000xp"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/activity_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:text="Run a mile"
+            android:textSize="17dp"/>
+    </LinearLayout>
 </LinearLayout>
