--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,5 +11,7 @@
     <dimen name="activity_type_header_size">25dp</dimen>
     <dimen name="activity_icon_background_size">80dp</dimen>
     <dimen name="activity_icon_size">70dp</dimen>
+    <dimen name="around_activities_lists_padding">20dp</dimen>
+    <dimen name="space_between_activity_types">20dp</dimen>
 
 </resources>
