--- a/app/src/main/res/layout/list_item_activity.xml
+++ b/app/src/main/res/layout/list_item_activity.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:padding="10dp"
+    android:padding="@dimen/padding_around_list_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <RelativeLayout
@@ -16,7 +16,7 @@
         <ImageView
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:padding="5dp"
+            android:padding="@dimen/padding_around_item_icon"
             android:id="@+id/activity_icon_image"
             android:src="@drawable/strength_icon_white"
             android:layout_width="match_parent"
@@ -26,8 +26,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingTop="10dp"
-        android:paddingLeft="20dp">
+        android:paddingTop="@dimen/padding_above_label"
+        android:paddingLeft="@dimen/padding_left_of_label">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,8 +35,7 @@
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/activity_category_name"
-                android:text="Running"
-                android:textSize="30dp"
+                android:textSize="@dimen/activity_label_text_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
@@ -44,16 +43,14 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
-                android:textSize="17dp"
-                android:text="+3000xp"/>
+                android:textSize="@dimen/activity_xp_text_size"/>
         </LinearLayout>
 
         <TextView
             android:id="@+id/activity_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:text="Run a mile"
-            android:textSize="17dp"/>
+            android:paddingTop="@dimen/padding_between_desc_label"
+            android:textSize="@dimen/activity_desc_text_size"/>
     </LinearLayout>
 </LinearLayout>
