--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,11 +7,20 @@
     <dimen name="tab_label">14sp</dimen>
     <dimen name="custom_tab_layout_height">72dp</dimen>
 
-    <!-- Activity dimension variables -->
+    <!-- Activities dimension variables -->
     <dimen name="activity_type_header_size">25dp</dimen>
     <dimen name="activity_icon_background_size">80dp</dimen>
     <dimen name="activity_icon_size">70dp</dimen>
     <dimen name="around_activities_lists_padding">20dp</dimen>
     <dimen name="space_between_activity_types">20dp</dimen>
+
+    <dimen name="padding_around_list_item">10dp</dimen>
+    <dimen name="padding_around_item_icon">5dp</dimen>
+    <dimen name="activity_label_text_size">30dp</dimen>
+    <dimen name="activity_xp_text_size">17dp</dimen>
+    <dimen name="activity_desc_text_size">17dp</dimen>
+    <dimen name="padding_between_desc_label">10dp</dimen>
+    <dimen name="padding_above_label">10dp</dimen>
+    <dimen name="padding_left_of_label">20dp</dimen>
 
 </resources>
