--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,9 @@
     <dimen name="tab_label">14sp</dimen>
     <dimen name="custom_tab_layout_height">72dp</dimen>
 
+    <!-- Home dimension variables -->
+    <dimen name="list_label_size">20dp</dimen>
+
     <!-- Activities dimension variables -->
     <dimen name="activity_type_header_size">25dp</dimen>
     <dimen name="activity_icon_background_size">80dp</dimen>
