--- a/app/src/main/res/layout/list_item_skill.xml
+++ b/app/src/main/res/layout/list_item_skill.xml
@@ -1,71 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:background="@color/behindMainArea"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:background="@color/mainAreaColor">
-
-    <ImageView
-        android:id="@+id/skill_icon_image"
-        android:layout_width="70dp"
-        android:layout_height="70dp" />
+    android:paddingBottom="20dp">
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:orientation="horizontal" android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/skill_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Skill Name"
-            android:textSize="35dp"
-            android:gravity="center"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/level_signifier_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Level: ##"
-                android:textSize="23dp"/>
-            <TextView
-                android:id="@+id/experience_to_next_level"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="5,000 xp to go"
-                android:gravity="right"
-                android:textSize="18dp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:paddingTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:paddingRight="10dp"
-                android:id="@+id/current_level_progress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10"/>
-            <ProgressBar
-                android:id="@+id/skill_progress_bar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:progressTint="@color/progressBarForegroundColor"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:indeterminate="false"
-                android:minWidth="100dp"
-                android:progress="20"
-                android:layout_weight="1" />
-            <TextView
-                android:paddingLeft="10dp"
-                android:id="@+id/next_level_progress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="11"/>
-        </LinearLayout>
-    </LinearLayout>
+        android:padding="10dp"
+        android:background="@color/mainAreaColor">
 
+        <ImageView
+            android:id="@+id/skill_icon_image"
+            android:layout_width="70dp"
+            android:layout_height="70dp" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/skill_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Skill Name"
+                android:textSize="35dp"
+                android:gravity="center"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/level_signifier_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Level: ##"
+                    android:textSize="23dp"/>
+                <TextView
+                    android:id="@+id/experience_to_next_level"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="5,000 xp to go"
+                    android:gravity="right"
+                    android:textSize="18dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:paddingTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:paddingRight="10dp"
+                    android:id="@+id/current_level_progress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10"/>
+                <ProgressBar
+                    android:id="@+id/skill_progress_bar"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:progressTint="@color/progressBarForegroundColor"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:indeterminate="false"
+                    android:minWidth="100dp"
+                    android:progress="20"
+                    android:layout_weight="1" />
+                <TextView
+                    android:paddingLeft="10dp"
+                    android:id="@+id/next_level_progress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="11"/>
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
 </LinearLayout>
