--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,14 +28,18 @@
     <dimen name="activity_type_header_size">25dp</dimen>
     <dimen name="activity_icon_background_size">80dp</dimen>
     <dimen name="activity_icon_size">70dp</dimen>
+    <dimen name="achievement_icon_size">70dp</dimen>
     <dimen name="around_activities_lists_padding">20dp</dimen>
     <dimen name="space_between_activity_types">20dp</dimen>
 
     <dimen name="padding_around_list_item">10dp</dimen>
     <dimen name="padding_around_item_icon">5dp</dimen>
     <dimen name="activity_label_text_size">30dp</dimen>
+    <dimen name="achievement_label_text_size">30dp</dimen>
     <dimen name="activity_xp_text_size">17dp</dimen>
+    <dimen name="achievement_xp_text_size">17dp</dimen>
     <dimen name="activity_desc_text_size">17dp</dimen>
+    <dimen name="achievement_desc_text_size">17dp</dimen>
     <dimen name="padding_between_desc_label">10dp</dimen>
     <dimen name="padding_above_label">10dp</dimen>
     <dimen name="padding_left_of_label">20dp</dimen>
