--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
     <color name="behindMainArea">#DDDDDD</color>
 
     <!-- Activities Fragment Colors -->
+    <color name="achievementsProgressColor">#28d201</color>
+    <color name="activitiesProgressColor">#f29500</color>
     <color name="dailiesColor">#BB0000</color>
     <color name="weekliesColor">#0099FF</color>
     <color name="monthliesColor">#7700BB</color>
