--- a/app/src/main/res/layout/list_item_activity.xml
+++ b/app/src/main/res/layout/list_item_activity.xml
@@ -46,11 +46,46 @@
                 android:textSize="@dimen/activity_xp_text_size"/>
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/activity_description"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/padding_between_desc_label"
-            android:textSize="@dimen/activity_desc_text_size"/>
+            android:orientation="horizontal"
+            android:paddingBottom="10dp">
+
+            <TextView
+                android:id="@+id/activity_description"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text=""
+                android:paddingTop="@dimen/padding_between_desc_label"
+                android:textSize="@dimen/activity_desc_text_size"/>
+            <TextView
+                android:id="@+id/activity_quantity_done"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10 / "
+                android:textColor="@color/textColorSecondary"
+                android:visibility="gone"/>
+            <TextView
+                android:id="@+id/activity_quantity_to_do"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="11"
+                android:paddingRight="20dp"
+                android:textColor="@color/textColorSecondary"
+                android:gravity="center"
+                android:visibility="gone"/>
+        </LinearLayout>
+        <ProgressBar
+            android:id="@+id/activity_progress_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
+            android:layout_weight="1"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:progress="10"
+            android:visibility="gone"/>
     </LinearLayout>
 </LinearLayout>
